# simd-playgroud

./: CMakeLists.txt  README
simd-algorithm/: CMakeLists.txt
simd-algorithm/include/simd-algorithm/: float_sum.h
simd-algorithm/src/: float_sum.cpp
simd-test/: CMakeLists.txt
simd-test/src/: main.cpp
